syntax = "proto3";

package uploader;
option go_package = "mdahlbom/google-photos-uploader/pb";

// import "google/protobuf/timestamp.proto";

message Journal {
    // List of files / subdirectories
    repeated JournalEntry entries = 1;
}

message JournalEntry {
    // Name (relative) of the file or directory
    string name = 1;

    // Upload token for this journal entry
    string upload_token = 2;

    // Whether this a 'media item' has been successfully created for this entry.
    // This also means the photo has been added to an album.
    bool media_item_created = 3;
}

